# foam_pet_G1

./: .gitignore  Metro.CX_Freeze.E.HTML  Metro.E.HTML  Metro.Frontiers.E.HTML  Metro.Labels.E.HTML  Metro.Moves.E.HTML  Metro.Publish.E.HTML  Metro.Publish.PyPI.E.HTML  Metro.Publish.Vultr.E.HTML  Metro.Topics.E.HTML  Regolith.Docker.E.HTML  Regolith.E.HTML  Regolith.Environment.E.HTML  Regolith.Favicon.E.HTML  Regolith.Frontiers.E.HTML  Regolith.Publish.E.HTML  Regolith.Rules.Domain.E.HTML  Regolith.Rules.E.HTML  Regolith.Rules.Git_Repository.E.HTML  Regolith.Rules.Publications.E.HTML  dependencies.txt  docker-compose.yml  docker-compose_v1.yml  pyproject.toml  readme.md  requirements.txt  setup.py
_health_selenium/: .gitignore  Health.E.HTML  build_1.sh  dependencies.txt  pyproject.toml  readme.md
_health_selenium/_Asks/: Asks.E.HTML
_health_selenium/regions/: health.proc.py
_health_selenium/regions/DB/: records.json
vehicles_actual_docker/: .gitignore  Vehicles.Debian.1.E.HTML  Vehicles.Debian.E.HTML  Vehicles.Debian.Notes.E.HTML  Vehicles.E.HTML  breaks.py  check_image.sh  make_image.py  pyproject.toml  the_build_readme.md
vehicles_actual_docker/_topics/: Vehicles.Alpine.JiteSoft.E.HTML  Vehicles.Arch.E.HTML  Vehicles.BusyBox.E.HTML  Vehicles.Photon.E.HTML  Vehicles.Python3.E.HTML  Vehicles.madworx.NetBSD.E.HTML
vehicles_actual_docker/architectures/: Architectures.E.HTML  RISC-V.E.HTML
vehicles_actual_docker/building/: Foam Rules v1.0.0-1.E.HTML  Foam_Pet.Rules.E.HTML  Foam_Pet.Rules.v1_3_0.0.E.HTML  PyPI.licenses.txt  build.sh  embark.sh
(+654 files in other folders)
