

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "_"
version = "0.0.0"
description = ""
authors = []
readme = "the_build_readme.md"
packages = [
    { include = "foam_pet", from = "vehicles" },
]
license = ""
exclude = []
include = []

[tool.poetry.dependencies]
python = "^3.10"



